deploy: f17f218ad5ac36e023acad98a1855beb0b6d06bb

--- a/publication/index.html
+++ b/publication/index.html
@@ -15,6 +15,11 @@ Journal article</option></select></div><div class=col-auto><select class="pub-fi
 <a href=/about/publication/2023-political-attitudes/>The Effects of Political Attitudes on Affective Polarization: Survey Evidence from 165 Elections</a>.
 <em>Political Studies Review</em>, vol. 21, n. 2.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1177/14789299211067376 target=_blank rel=noopener>DOI</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://www.researchgate.net/publication/357795696_The_Effects_of_Political_Attitudes_on_Affective_Polarization_Survey_Evidence_from_165_Elections target=_blank rel=noopener>Ungated</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2022"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author"><span>Asbel Bohigues</span>, <span class=author-highlighted>João V. Guedes-Neto</span>, <span>Manoel L. Santos</span></span>
+(2022).
+<a href=/about/publication/2022-political-elites/>Latin American political elites’ positions on same-sex marriage, abortion, and drug legalization</a>.
+<em>European Review of Latin American and Caribbean Studies</em>, vol. 114.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.32992/erlacs.10833 target=_blank rel=noopener>DOI</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://www.researchgate.net/publication/363075958_Latin_American_political_elites%27_positions_on_same-sex_marriage_abortion_and_drug_legalization target=_blank rel=noopener>Ungated</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2022"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span class=author-highlighted>João V. Guedes-Neto</span></span>
 (2022).
 <a href=/about/publication/2022-from-drug-lords/>From Drug Lords to Police State: The Effects of Order Transition on Local Economies</a>.
